@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2007, 2021, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2007, 2022, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,7 +25,7 @@
  * @bug 4052404 4052440 4084688 4092475 4101316 4105828 4107014 4107953 4110613
  * 4118587 4118595 4122371 4126371 4126880 4135316 4135752 4139504 4139940 4143951
  * 4147315 4147317 4147552 4335196 4778440 4940539 5010672 6475525 6544471 6627549
- * 6786276 7066203 7085757 8008577 8030696 8170840 8255086 8263202
+ * 6786276 7066203 7085757 8008577 8030696 8170840 8255086 8263202 8287868
  * @summary test Locales
  * @library /java/text/testlib
  * @modules jdk.localedata
@@ -33,7 +33,10 @@
  * @run main/othervm -Djava.locale.providers=COMPAT,SPI -Djava.locale.useOldISOCodes=true LocaleTest
  */
 /*
- *
+ * This file is available under and governed by the GNU General Public
+ * License version 2 only, as published by the Free Software Foundation.
+ * However, the following notice accompanied the original version of this
+ * file and, per its terms, should not be removed:
  *
  * (C) Copyright Taligent, Inc. 1996, 1997 - All Rights Reserved
  * (C) Copyright IBM Corp. 1996 - 1998 - All Rights Reserved
@@ -154,11 +157,11 @@ public class LocaleTest extends IntlTest {
         // display langage (French)
         {   "anglais",  "fran\u00e7ais",   "croate", "grec",    "norv\u00e9gien",    "italien", "xx" },
         // display country (French)
-        {   "Etats-Unis",    "France",   "Croatie",  "Gr\u00e8ce",   "Norv\u00e8ge", "",     "YY" },
+        {   "\u00c9tats-Unis",    "France",   "Croatie",  "Gr\u00e8ce",   "Norv\u00e8ge", "",     "YY" },
         // display variant (French)
         {   "",     "",     "",     "",     "",     "",    "" },
         // display name (French)
-        {   "anglais (Etats-Unis)", "fran\u00e7ais (France)", "croate (Croatie)", "grec (Gr\u00e8ce)", "norv\u00e9gien (Norv\u00e8ge,Nynorsk)", "italien", "xx (YY)" },
+        {   "anglais (\u00c9tats-Unis)", "fran\u00e7ais (France)", "croate (Croatie)", "grec (Gr\u00e8ce)", "norv\u00e9gien (Norv\u00e8ge,Nynorsk)", "italien", "xx (YY)" },
 
         // display langage (Croatian)
         {   "",  "", "hrvatski", "",    "", "", "xx" },
@@ -194,7 +197,7 @@ public class LocaleTest extends IntlTest {
 
     public void TestBasicGetters() {
         for (int i = 0; i <= MAX_LOCALES; i++) {
-            Locale testLocale = new Locale(dataTable[LANG][i], dataTable[CTRY][i], dataTable[VAR][i]);
+            Locale testLocale = Locale.of(dataTable[LANG][i], dataTable[CTRY][i], dataTable[VAR][i]);
             logln("Testing " + testLocale + "...");
 
             if (!testLocale.getLanguage().equals(dataTable[LANG][i])) {
@@ -217,7 +220,7 @@ public class LocaleTest extends IntlTest {
 
         logln("Same thing without variant codes...");
         for (int i = 0; i <= MAX_LOCALES; i++) {
-            Locale testLocale = new Locale(dataTable[LANG][i], dataTable[CTRY][i]);
+            Locale testLocale = Locale.of(dataTable[LANG][i], dataTable[CTRY][i]);
             logln("Testing " + testLocale + "...");
 
             if (!testLocale.getLanguage().equals(dataTable[LANG][i])) {
@@ -240,7 +243,7 @@ public class LocaleTest extends IntlTest {
                 continue;
             }
 
-            Locale testLocale = new Locale(dataTable[LANG][i], dataTable[CTRY][i], dataTable[VAR][i]);
+            Locale testLocale = Locale.of(dataTable[LANG][i], dataTable[CTRY][i], dataTable[VAR][i]);
             logln("Testing " + testLocale + "...");
 
             if (!testLocale.getISO3Language().equals(dataTable[LANG3][i])) {
@@ -268,10 +271,10 @@ public class LocaleTest extends IntlTest {
      */
     public void TestDisplayNames() {
         Locale saveDefault = Locale.getDefault();
-        Locale english = new Locale("en", "US");
-        Locale french = new Locale("fr", "FR");
-        Locale croatian = new Locale("hr", "HR");
-        Locale greek = new Locale("el", "GR");
+        Locale english = Locale.US;
+        Locale french = Locale.FRANCE;
+        Locale croatian = Locale.of("hr", "HR");
+        Locale greek = Locale.of("el", "GR");
 
         Locale.setDefault(english);
         logln("With default = en_US...");
@@ -312,7 +315,7 @@ public class LocaleTest extends IntlTest {
         }
 
         for (int i = 0; i <= MAX_LOCALES; i++) {
-            Locale testLocale = new Locale(dataTable[LANG][i], dataTable[CTRY][i], dataTable[VAR][i]);
+            Locale testLocale = Locale.of(dataTable[LANG][i], dataTable[CTRY][i], dataTable[VAR][i]);
             logln("  Testing " + testLocale + "...");
 
             String testLang;
@@ -384,11 +387,12 @@ public class LocaleTest extends IntlTest {
         }
     }
 
+    @SuppressWarnings("deprecation")
     public void TestSimpleObjectStuff() {
         Locale test1 = new Locale("aa", "AA");
         Locale test2 = new Locale("aa", "AA");
         Locale test3 = (Locale) test1.clone();
-        Locale test4 = new Locale("zz", "ZZ");
+        Locale test4 = Locale.of("zz", "ZZ");
 
         if (test1 == test2 || test1 == test3 || test1 == test4 || test2 == test3) {
             errln("Some of the test variables point to the same locale!");
@@ -419,7 +423,7 @@ public class LocaleTest extends IntlTest {
      * @bug 4011756 4011380
      */
     public void TestISO3Fallback() {
-        Locale test = new Locale("xx", "YY", "");
+        Locale test = Locale.of("xx", "YY");
         boolean gotException = false;
         String result = "";
 
@@ -612,7 +616,7 @@ test commented out pending API-change approval
         obstream = new ByteArrayOutputStream();
         ostream = new ObjectOutputStream(obstream);
 
-        Locale test1 = new Locale("zh", "TW", "");
+        Locale test1 = Locale.of("zh", "TW");
         int dummy = test1.hashCode();   // fill in the cached hash-code value
         ostream.writeObject(test1);
 
@@ -640,7 +644,7 @@ test commented out pending API-change approval
             "Zhuang"};
 
         for (int i = 0; i < languageCodes.length; i++) {
-            String test = (new Locale(languageCodes[i], "", "")).getDisplayLanguage(Locale.US);
+            String test = (Locale.of(languageCodes[i])).getDisplayLanguage(Locale.US);
             if (!test.equals(languageNames[i])) {
                 errln("Got wrong display name for " + languageCodes[i] + ": Expected \""
                         + languageNames[i] + "\", got \"" + test + "\".");
@@ -658,7 +662,7 @@ test commented out pending API-change approval
         String[] iso3Languages = {"amh", "bak", "fry", "mar", "run", "ssw", "twi", "zul"};
 
         for (int i = 0; i < iso2Languages.length; i++) {
-            String test = (new Locale(iso2Languages[i], "", "")).getISO3Language();
+            String test = (Locale.of(iso2Languages[i])).getISO3Language();
             if (!test.equals(iso3Languages[i])) {
                 errln("Got wrong ISO3 code for " + iso2Languages[i] + ": Expected \""
                         + iso3Languages[i] + "\", got \"" + test + "\".");
@@ -669,7 +673,7 @@ test commented out pending API-change approval
         String[] iso3Countries = {"AFG", "BWA", "KAZ", "MAC", "MNG", "SLB", "TCA", "ZWE"};
 
         for (int i = 0; i < iso2Countries.length; i++) {
-            String test = (new Locale("", iso2Countries[i], "")).getISO3Country();
+            String test = (Locale.of("", iso2Countries[i])).getISO3Country();
             if (!test.equals(iso3Countries[i])) {
                 errln("Got wrong ISO3 code for " + iso2Countries[i] + ": Expected \""
                         + iso3Countries[i] + "\", got \"" + test + "\".");
@@ -681,12 +685,12 @@ test commented out pending API-change approval
      * @bug 4052404 4778440 8263202
      */
     public void TestChangedISO639Codes() {
-        Locale hebrewOld = new Locale("iw", "IL", "");
-        Locale hebrewNew = new Locale("he", "IL", "");
-        Locale yiddishOld = new Locale("ji", "IL", "");
-        Locale yiddishNew = new Locale("yi", "IL", "");
-        Locale indonesianOld = new Locale("in", "", "");
-        Locale indonesianNew = new Locale("id", "", "");
+        Locale hebrewOld = Locale.of("iw", "IL");
+        Locale hebrewNew = Locale.of("he", "IL");
+        Locale yiddishOld = Locale.of("ji", "IL");
+        Locale yiddishNew = Locale.of("yi", "IL");
+        Locale indonesianOld = Locale.of("in");
+        Locale indonesianNew = Locale.of("id");
 
         if ("true".equalsIgnoreCase(System.getProperty("java.locale.useOldISOCodes"))) {
             if (!hebrewNew.getLanguage().equals("iw")) {
@@ -736,15 +740,15 @@ test commented out pending API-change approval
      *
      */
     public void TestAtypicalLocales() {
-        Locale[] localesToTest = { new Locale("de", "CA"),
-                                   new Locale("ja", "ZA"),
-                                   new Locale("ru", "MX"),
-                                   new Locale("en", "FR"),
-                                   new Locale("es", "DE"),
-                                   new Locale("", "HR"),
-                                   new Locale("", "SE"),
-                                   new Locale("", "DO"),
-                                   new Locale("", "BE") };
+        Locale[] localesToTest = { Locale.of("de", "CA"),
+                                   Locale.of("ja", "ZA"),
+                                   Locale.of("ru", "MX"),
+                                   Locale.of("en", "FR"),
+                                   Locale.of("es", "DE"),
+                                   Locale.of("", "HR"),
+                                   Locale.of("", "SE"),
+                                   Locale.of("", "DO"),
+                                   Locale.of("", "BE") };
         String[] englishDisplayNames = { "German (Canada)",
                                          "Japanese (South Africa)",
                                          "Russian (Mexico)",
@@ -761,7 +765,7 @@ test commented out pending API-change approval
                                          "espagnol (Allemagne)",
                                         "Croatie",
                                         "Su\u00e8de",
-                                        "R\u00e9publique Dominicaine",
+                                        "R\u00e9publique dominicaine",
                                         "Belgique" };
         String[] spanishDisplayNames = { "alem\u00E1n (Canad\u00E1)",
                                          "japon\u00E9s (Sud\u00E1frica)",
@@ -788,7 +792,7 @@ test commented out pending API-change approval
         }
 
         for (int i = 0; i < localesToTest.length; i++) {
-            String name = localesToTest[i].getDisplayName(new Locale("es", "ES"));
+            String name = localesToTest[i].getDisplayName(Locale.of("es", "ES"));
             logln(name);
             if (!name.equals(spanishDisplayNames[i])) {
                 errln("Lookup in Spanish failed: expected \"" + spanishDisplayNames[i]
@@ -837,7 +841,7 @@ test commented out pending API-change approval
      */
     public void TestThaiCurrencyFormat() {
         DecimalFormat thaiCurrency = (DecimalFormat) NumberFormat.getCurrencyInstance(
-                new Locale("th", "TH"));
+                Locale.of("th", "TH"));
         if (!thaiCurrency.getPositivePrefix().equals("\u0e3f")) {
             errln("Thai currency prefix wrong: expected \"\u0e3f\", got \""
                     + thaiCurrency.getPositivePrefix() + "\"");
@@ -892,13 +896,13 @@ test commented out pending API-change approval
      */
     public void TestToString() {
         Object[] DATA = {
-            new Locale("xx", "", ""), "xx",
-            new Locale("", "YY", ""), "_YY",
-            new Locale("", "", "ZZ"), "",
-            new Locale("xx", "YY", ""), "xx_YY",
-            new Locale("xx", "", "ZZ"), "xx__ZZ",
-            new Locale("", "YY", "ZZ"), "_YY_ZZ",
-            new Locale("xx", "YY", "ZZ"), "xx_YY_ZZ",
+            Locale.of("xx", "", ""), "xx",
+            Locale.of("", "YY", ""), "_YY",
+            Locale.of("", "", "ZZ"), "",
+            Locale.of("xx", "YY", ""), "xx_YY",
+            Locale.of("xx", "", "ZZ"), "xx__ZZ",
+            Locale.of("", "YY", "ZZ"), "_YY_ZZ",
+            Locale.of("xx", "YY", "ZZ"), "xx_YY_ZZ",
         };
         for (int i = 0; i < DATA.length; i += 2) {
             Locale loc = (Locale) DATA[i];
@@ -915,8 +919,8 @@ test commented out pending API-change approval
      * end to test the whole pipe.
      */
     public void Test4105828() {
-        Locale[] LOC = {Locale.CHINESE, new Locale("zh", "CN", ""),
-            new Locale("zh", "TW", ""), new Locale("zh", "HK", "")};
+        Locale[] LOC = {Locale.CHINESE, Locale.of("zh", "CN"),
+            Locale.of("zh", "TW"), Locale.of("zh", "HK")};
         for (int i = 0; i < LOC.length; ++i) {
             NumberFormat fmt = NumberFormat.getPercentInstance(LOC[i]);
             String result = fmt.format(1);
@@ -943,7 +947,7 @@ test commented out pending API-change approval
      * test that here.
      */
     public void Test4139940() {
-        Locale mylocale = new Locale("hu", "", "");
+        Locale mylocale = Locale.of("hu");
         @SuppressWarnings("deprecation")
         Date mydate = new Date(98, 3, 13); // A Monday
         DateFormat df_full = new SimpleDateFormat("EEEE", mylocale);
@@ -960,7 +964,7 @@ test commented out pending API-change approval
      * Russian first day of week should be Monday. Confirmed.
      */
     public void Test4143951() {
-        Calendar cal = Calendar.getInstance(new Locale("ru", "", ""));
+        Calendar cal = Calendar.getInstance(Locale.of("ru"));
         if (cal.getFirstDayOfWeek() != Calendar.MONDAY) {
             errln("Fail: First day of week in Russia should be Monday");
         }
@@ -974,7 +978,7 @@ test commented out pending API-change approval
     public void Test4147315() {
         // Try with codes that are the wrong length but happen to match text
         // at a valid offset in the mapping table
-        Locale locale = new Locale("aaa", "CCC");
+        Locale locale = Locale.of("aaa", "CCC");
 
         try {
             String result = locale.getISO3Country();
@@ -994,7 +998,7 @@ test commented out pending API-change approval
     public void Test4147317() {
         // Try a three letter language code, and check whether it is
         // returned as is.
-        Locale locale = new Locale("aaa", "CCC");
+        Locale locale = Locale.of("aaa", "CCC");
 
         String result = locale.getISO3Language();
         if (!result.equals("aaa")) {
@@ -1004,7 +1008,7 @@ test commented out pending API-change approval
 
         // Try an invalid two letter language code, and check whether it
         // throws a MissingResourceException.
-        locale = new Locale("zz", "CCC");
+        locale = Locale.of("zz", "CCC");
 
         try {
             result = locale.getISO3Language();
@@ -1019,9 +1023,9 @@ test commented out pending API-change approval
      * @bug 4147552 4778440 8030696
      */
     public void Test4147552() {
-        Locale[] locales = {new Locale("no", "NO"), new Locale("no", "NO", "B"),
-            new Locale("no", "NO", "NY"), new Locale("nb", "NO"),
-            new Locale("nn", "NO")};
+        Locale[] locales = {Locale.of("no", "NO"), Locale.of("no", "NO", "B"),
+            Locale.of("no", "NO", "NY"), Locale.of("nb", "NO"),
+            Locale.of("nn", "NO")};
         String[] englishDisplayNames = {"Norwegian (Norway)",
             "Norwegian (Norway,Bokm\u00e5l)",
             "Norwegian (Norway,Nynorsk)",
@@ -1029,7 +1033,7 @@ test commented out pending API-change approval
             "Norwegian Nynorsk (Norway)"};
         String[] norwegianDisplayNames = {"norsk (Norge)",
             "norsk (Norge,bokm\u00e5l)", "norsk (Noreg,nynorsk)",
-            "bokm\u00e5l (Norge)", "nynorsk (Noreg)"};
+            "norsk bokm\u00e5l (Norge)", "norsk nynorsk (Noreg)"};
 
         for (int i = 0; i < locales.length; i++) {
             Locale loc = locales[i];
@@ -1050,8 +1054,8 @@ test commented out pending API-change approval
      */
     public void Test8030696() {
         List<Locale> av = Arrays.asList(Locale.getAvailableLocales());
-        if (!av.contains(new Locale("nb", "NO"))
-                || !av.contains(new Locale("nn", "NO"))) {
+        if (!av.contains(Locale.of("nb", "NO"))
+                || !av.contains(Locale.of("nn", "NO"))) {
             errln("\"nb-NO\" and/or \"nn-NO\" locale(s) not returned from getAvailableLocales().");
         }
     }
